= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Enhancements::

* allow hyphenation to be turned on and configured using the `base-hyphens` key in the theme (#2161)
* replace `docdir` attribute reference in value of `pdf-themesdir` and `pdf-fontsdir` attributes (if not already replaced) (#412)
* split out `start_title_page` method from `ink_title_page` to make customization of the title page simpler using an extended converter
* introduce `start_toc_page` method to handle positioning cursor at first page of TOC

Improvements::

* reclassify and mark which methods in the converter are private
* organize methods in converter
* add DOM traversal methods to simplify the logic in the converter
* remove requirement to add dummy text to title page to preserve it

Bug Fixes::

* apply top line height padding to first line of text when text runs to top of next page (#2173)
* don't add entry to outline for notitle section if no content follows it
* don't add entry to TOC for notitle section if no content follows it
* look for block align roles on image instead of text align roles (#2176)
* use correct left value when creating bounding box
* don't apply border on block images to logo image on title page

== 2.0.0.beta.2 (2022-05-14) - @mojavelinux

Enhancements::

* add support for float attribute on image; wrap ensuing paragraphs around image with `float` attribute (#353)
* add `supports_float_wrapping?` method for extended converter to override to enlist other blocks in float wrapping; add example to docs (#353)
* add `image-float-gap` key to theme to control space around image float (#353)
* add support for `text-transform` property on first line of abstract in theme (#2141)